--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <!-- Buttons -->
     <dimen name="button_height">58dp</dimen>
     <dimen name="toolbar_elevation">8dp</dimen>
+
+    <dimen name="bottom_navigation_height">56dp</dimen>
 </resources>
