--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,17 +41,17 @@
 
     <style name="Widget.Studs.BottomNav" parent="@style/Widget.MaterialComponents.BottomNavigationView.Colored">
         <item name="itemIconTint">@android:color/holo_green_light</item>
-        <item name="itemTextAppearanceActive">@style/TextAppearance.IOSched.BottomNavigationView.Active</item>
-        <item name="itemTextAppearanceInactive">@style/TextAppearance.IOSched.BottomNavigationView</item>
+        <item name="itemTextAppearanceActive">@style/TextAppearance.Studs.BottomNavigationView.Active</item>
+        <item name="itemTextAppearanceInactive">@style/TextAppearance.Studs.BottomNavigationView</item>
         <item name="labelVisibilityMode">selected</item>
         <item name="android:theme">@style/ThemeOverlay.MaterialComponents.Dark</item>
     </style>
 
-    <style name="TextAppearance.IOSched.BottomNavigationView" parent="@style/Widget.MaterialComponents.BottomNavigationView.Colored">
+    <style name="TextAppearance.Studs.BottomNavigationView" parent="@style/Widget.MaterialComponents.BottomNavigationView.Colored">
         <item name="android:textColor">@android:color/holo_green_light</item>
     </style>
 
-    <style name="TextAppearance.IOSched.BottomNavigationView.Active">
+    <style name="TextAppearance.Studs.BottomNavigationView.Active">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">14sp</item>
     </style>
