--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -53,7 +53,9 @@
 
         <Button
             android:id="@+id/btn_reset_password"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_marginTop="24dp"
+            android:backgroundTint="@color/colorAccent"
             android:text="@string/reset_password"
             android:layout_height="@dimen/button_height" />
     </LinearLayout>
