--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,8 +79,7 @@
                 android:layout_height="@dimen/button_height"
                 android:layout_marginTop="24dp"
                 android:backgroundTint="@color/colorAccent"
-                android:text="@string/login"
-                android:textColor="@android:color/white" />
+                android:text="@string/login" />
 
             <Button
                 android:id="@+id/btn_forgot_password"
