--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,4 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary"
-    android:elevation="@dimen/toolbar_elevation" />
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
