Code cleanup for @mictab

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -54,7 +54,7 @@
         <Button
             android:id="@+id/btn_reset_password"
             android:layout_width="match_parent"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="@dimen/default_margin_large"
             android:backgroundTint="@color/colorAccent"
             android:text="@string/reset_password"
             android:layout_height="@dimen/button_height" />
