--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,13 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     tools:context=".login.views.ForgotPasswordActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@android:color/white"
+        android:background="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_height="wrap_content">
@@ -19,56 +20,63 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_height="?android:attr/actionBarSize"
             />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="@dimen/default_margin"
+    <androidx.cardview.widget.CardView
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
-        android:layout_marginTop="@dimen/default_margin"
-        app:layout_constraintStart_toStartOf="parent">
+        android:layout_margin="@dimen/default_margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/tv_forgot_password_title"
-            android:clickable="true"
-            android:layout_width="wrap_content"
-            android:textSize="22sp"
-            android:layout_height="wrap_content"
-            android:text="@string/forgot_your_password"
-            android:focusable="true" />
-
-        <com.google.android.material.textfield.TextInputLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/default_margin_huge"
             android:layout_height="wrap_content"
-            app:errorEnabled="true">
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="@dimen/default_margin"
+            android:layout_marginTop="@dimen/default_margin">
 
-            <EditText
-                android:id="@+id/et_email"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tv_forgot_password_title"
+                android:clickable="true"
+                android:layout_width="wrap_content"
+                android:textSize="22sp"
                 android:layout_height="wrap_content"
-                android:autofillHints="email"
-                android:hint="@string/email"
-                android:inputType="textEmailAddress"
-                tools:targetApi="o" />
+                android:text="@string/forgot_your_password"
+                android:focusable="true" />
 
-        </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/default_margin_huge"
+                android:layout_height="wrap_content"
+                app:errorEnabled="true">
 
-        <Button
-            android:id="@+id/btn_reset_password"
-            android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/default_margin_large"
-            android:backgroundTint="@color/colorAccent"
-            android:text="@string/reset_password"
-            android:layout_height="@dimen/button_height" />
-    </LinearLayout>
+                <EditText
+                    android:id="@+id/et_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:autofillHints="email"
+                    android:hint="@string/email"
+                    android:inputType="textEmailAddress"
+                    tools:targetApi="o" />
 
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/btn_reset_password"
+                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/default_margin_large"
+                android:backgroundTint="@color/colorAccent"
+                android:text="@string/reset_password"
+                android:layout_height="@dimen/button_height" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
