--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,89 +5,96 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
+    android:background="@color/colorPrimary"
     tools:context=".login.views.LoginActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp">
 
-        <LinearLayout
-            android:id="@+id/login_container"
-            android:layout_width="0dp"
+        <ImageView
+            android:id="@+id/login_logo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:src="@drawable/ic_logo"
+            android:adjustViewBounds="true"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="@dimen/default_margin_giant"
+            android:layout_marginEnd="@dimen/default_margin_giant"
+            android:layout_marginTop="@dimen/default_margin_giant"
+            />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/default_margin_large"
             android:layout_marginTop="@dimen/default_margin_enormous"
-            android:layout_marginEnd="24dp"
-            android:gravity="center"
-            android:orientation="vertical"
+            android:layout_marginEnd="@dimen/default_margin_large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/login_logo"
+            app:cardCornerRadius="15dp"
+            android:elevation="15dp">
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_margin_enormous"
-                android:text="@string/studs"
-                android:textSize="62sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <!-- Email field -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_email"
+            <LinearLayout
+                android:id="@+id/login_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:errorEnabled="true">
+                android:gravity="center"
+                android:padding="@dimen/default_margin"
+                android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/et_email"
+                <!-- Email field -->
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:autofillHints="email"
-                    android:hint="@string/email"
-                    android:inputType="textEmailAddress"
-                    tools:targetApi="o" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    app:errorEnabled="true">
 
-            <!-- Password field -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:errorEnabled="true">
+                    <EditText
+                        android:id="@+id/et_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:autofillHints="email"
+                        android:hint="@string/email"
+                        android:inputType="textEmailAddress"
+                        tools:targetApi="o" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/et_password"
+                <!-- Password field -->
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:autofillHints="password"
-                    android:hint="@string/password"
-                    android:inputType="textPassword"
-                    tools:targetApi="o" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    app:errorEnabled="true">
 
-            <Button
-                android:id="@+id/btn_login"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/button_height"
-                android:layout_marginTop="24dp"
-                android:backgroundTint="@color/colorAccent"
-                android:text="@string/login" />
+                    <EditText
+                        android:id="@+id/et_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:autofillHints="password"
+                        android:hint="@string/password"
+                        android:inputType="textPassword"
+                        tools:targetApi="o" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-            <Button
-                android:id="@+id/btn_forgot_password"
-                style="@style/FlatButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/forgot_password" />
-        </LinearLayout>
+                <Button
+                    android:id="@+id/btn_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/button_height"
+                    android:layout_marginTop="@dimen/default_margin_small"
+                    android:backgroundTint="@color/colorAccent"
+                    android:text="@string/login" />
+
+                <Button
+                    android:id="@+id/btn_forgot_password"
+                    style="@style/FlatButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/forgot_password" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
