--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,33 +5,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
+    android:background="@color/colorPrimaryDark"
     tools:context=".login.views.ForgotPasswordActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar_layout"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="wrap_content">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:layout_height="?android:attr/actionBarSize"
-            />
-
-    </com.google.android.material.appbar.AppBarLayout>
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:layout_height="?android:attr/actionBarSize"
+        />
 
     <androidx.cardview.widget.CardView
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         android:layout_margin="@dimen/default_margin"
         android:layout_width="match_parent"
+        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardCornerRadius="0dp"
+        app:cardElevation="6dp"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -48,6 +44,7 @@
                 android:layout_width="wrap_content"
                 android:textSize="22sp"
                 android:layout_height="wrap_content"
+                android:textColor="@android:color/white"
                 android:text="@string/forgot_your_password"
                 android:focusable="true" />
 
@@ -55,6 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_marginTop="@dimen/default_margin_huge"
                 android:layout_height="wrap_content"
+                android:theme="@style/WhiteTextField"
                 app:errorEnabled="true">
 
                 <EditText
@@ -63,6 +61,7 @@
                     android:layout_height="wrap_content"
                     android:autofillHints="email"
                     android:hint="@string/email"
+                    android:textColor="@color/colorAccent"
                     android:inputType="textEmailAddress"
                     tools:targetApi="o" />
 
