--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,47 +10,46 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/colorPrimaryDark"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:layout_height="?android:attr/actionBarSize"
-        />
+        android:background="@color/colorPrimaryDark"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:layout_margin="@dimen/default_margin"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/default_margin"
         app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="0dp"
         app:cardElevation="6dp"
-        android:layout_height="wrap_content">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_margin"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="@dimen/default_margin"
-            android:layout_marginTop="@dimen/default_margin">
+            android:padding="@dimen/default_margin">
 
             <TextView
                 android:id="@+id/tv_forgot_password_title"
-                android:clickable="true"
                 android:layout_width="wrap_content"
-                android:textSize="22sp"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/white"
+                android:clickable="true"
+                android:focusable="true"
                 android:text="@string/forgot_your_password"
-                android:focusable="true" />
+                android:textColor="@android:color/white"
+                android:textSize="22sp" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/default_margin_huge"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_margin_huge"
                 android:theme="@style/WhiteTextField"
                 app:errorEnabled="true">
 
@@ -61,8 +59,8 @@
                     android:layout_height="wrap_content"
                     android:autofillHints="email"
                     android:hint="@string/email"
-                    android:textColor="@color/colorAccent"
                     android:inputType="textEmailAddress"
+                    android:textColor="@color/colorAccent"
                     tools:targetApi="o" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -70,10 +68,10 @@
             <Button
                 android:id="@+id/btn_reset_password"
                 android:layout_width="match_parent"
+                android:layout_height="@dimen/button_height"
                 android:layout_marginTop="@dimen/default_margin_large"
                 android:backgroundTint="@color/colorAccent"
-                android:text="@string/reset_password"
-                android:layout_height="@dimen/button_height" />
+                android:text="@string/reset_password" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
