--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
     android:background="@color/colorPrimaryDark"
+    android:fillViewport="true"
     tools:context=".login.views.LoginActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,13 +16,13 @@
             android:id="@+id/login_logo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_logo"
-            android:adjustViewBounds="true"
-            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="@dimen/default_margin_giant"
-            android:layout_marginEnd="@dimen/default_margin_giant"
             android:layout_marginTop="@dimen/default_margin_giant"
-            android:contentDescription="@string/app_name" />
+            android:layout_marginEnd="@dimen/default_margin_giant"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_logo"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -30,20 +30,20 @@
             android:layout_marginStart="@dimen/default_margin_large"
             android:layout_marginTop="@dimen/default_margin_enormous"
             android:layout_marginEnd="@dimen/default_margin_large"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/login_logo"
             app:cardBackgroundColor="@color/colorPrimary"
             app:cardCornerRadius="0dp"
-            app:cardElevation="6dp">
+            app:cardElevation="6dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/login_logo">
 
             <LinearLayout
                 android:id="@+id/login_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:padding="@dimen/default_margin"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/default_margin">
 
                 <!-- Email field -->
                 <com.google.android.material.textfield.TextInputLayout
@@ -69,9 +69,9 @@
                     android:id="@+id/til_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:passwordToggleEnabled="true"
                     android:theme="@style/WhiteTextField"
-                    app:errorEnabled="true">
+                    app:errorEnabled="true"
+                    app:passwordToggleEnabled="true">
 
                     <EditText
                         android:id="@+id/et_password"
@@ -79,8 +79,8 @@
                         android:layout_height="wrap_content"
                         android:autofillHints="password"
                         android:hint="@string/password"
-                        android:textColor="@color/colorAccent"
                         android:inputType="textPassword"
+                        android:textColor="@color/colorAccent"
                         tools:targetApi="o" />
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,10 +95,10 @@
                 <Button
                     android:id="@+id/btn_forgot_password"
                     style="@style/FlatButton"
-                    android:textColor="@android:color/white"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/forgot_password" />
+                    android:text="@string/forgot_password"
+                    android:textColor="@android:color/white" />
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
