--- a/app/src/main/res/layout/list_item_event_card.xml
+++ b/app/src/main/res/layout/list_item_event_card.xml
@@ -1,40 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="200dp"
+    android:layout_marginBottom="16dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
-    android:layout_marginBottom="16dp"
-    xmlns:tools="http://schemas.android.com/tools">
-    
+    android:foreground="?attr/selectableItemBackground">
+
     <androidx.cardview.widget.CardView
-        android:layout_gravity="bottom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:orientation="vertical"
-            android:padding="16dp"
-            android:layout_height="match_parent">
+            android:padding="16dp">
+
             <TextView
                 android:id="@+id/tv_company_name"
                 android:layout_width="wrap_content"
-                tools:hint="SEB"
-                android:textSize="28sp"
+                android:layout_height="wrap_content"
                 android:background="@android:color/white"
                 android:textColor="@android:color/black"
-                android:layout_height="wrap_content" />
+                android:textSize="28sp"
+                tools:hint="SEB" />
 
             <TextView
                 android:id="@+id/tv_company_location"
                 android:layout_width="wrap_content"
-                tools:hint="En Gata 12"
-                android:textSize="16sp"
+                android:layout_height="wrap_content"
                 android:background="@android:color/white"
                 android:textColor="@android:color/black"
-                android:layout_height="wrap_content" />
+                android:textSize="16sp"
+                tools:hint="En Gata 12" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
