Fix text colors

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -71,6 +71,7 @@
                 android:layout_height="@dimen/button_height"
                 android:layout_marginTop="@dimen/default_margin_large"
                 android:backgroundTint="@color/colorAccent"
+                android:textColor="@android:color/black"
                 android:text="@string/reset_password" />
         </LinearLayout>
 
