--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -29,11 +29,11 @@
             android:background="@android:color/white"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
+                style="@style/Widget.MaterialComponents.CardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/default_margin_small"
-                app:cardUseCompatPadding="true">
+                android:layout_marginBottom="@dimen/default_margin_small">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -41,51 +41,91 @@
                     android:orientation="vertical"
                     android:padding="@dimen/default_margin">
 
-                    <TextView
-                        android:id="@+id/tv_company_name"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/tv_month"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:textAllCaps="true"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:textSize="14sp"
+                                android:textStyle="bold"
+                                tools:text="Feb" />
+
+                            <TextView
+                                android:id="@+id/tv_day"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:textSize="24sp"
+                                tools:text="7" />
+                        </LinearLayout>
+
+                        <TextView
+                            android:id="@+id/tv_company_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="@dimen/default_margin"
+                            android:layout_marginBottom="@dimen/default_margin_mini"
+                            android:gravity="center_vertical"
+                            android:textColor="@android:color/black"
+                            android:textSize="28sp"
+                            tools:hint="Spotify" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/tv_event_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/default_margin"
                         android:layout_marginBottom="@dimen/default_margin_mini"
-                        android:textSize="22sp"
-                        android:textStyle="bold"
-                        tools:hint="Spotify" />
+                        android:alpha="0.7"
+                        android:drawableStart="@drawable/ic_time_icon"
+                        android:drawablePadding="@dimen/default_margin_mini"
+                        android:gravity="center_vertical"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp"
+                        tools:hint="17:00 - 20:00" />
 
                     <TextView
                         android:id="@+id/tv_company_location"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/default_margin_mini"
+                        android:alpha="0.7"
                         android:background="?attr/selectableItemBackground"
                         android:clickable="true"
-                        android:drawableStart="@drawable/baseline_location_on_24"
-                        android:drawablePadding="@dimen/default_margin_mini"
+                        android:drawableStart="@drawable/ic_location_icon"
+                        android:drawablePadding="@dimen/default_margin_small"
                         android:focusable="true"
                         android:gravity="center_vertical"
-                        tools:hint="Cool Street 123" />
-
-                    <TextView
-                        android:id="@+id/tv_event_date"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="@dimen/default_margin_mini"
-                        android:drawableStart="@drawable/baseline_calendar_today_24"
-                        android:drawablePadding="@dimen/default_margin_mini"
-                        android:gravity="center_vertical"
+                        android:textColor="@android:color/black"
+                        android:textSize="14sp"
                         tools:hint="Cool Street 123" />
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
             <LinearLayout
-                android:orientation="vertical"
-                android:layout_marginTop="@dimen/default_margin_small"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/default_margin_mini"
-                android:padding="@dimen/default_margin_small"
-                android:clipToPadding="false"
-                android:clipChildren="false"
+                android:layout_marginTop="@dimen/default_margin_small"
                 android:layout_marginEnd="@dimen/default_margin_mini"
-                android:layout_height="wrap_content">
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                android:orientation="vertical"
+                android:padding="@dimen/default_margin_small">
 
                 <Button
                     android:id="@+id/btn_pre_event"
@@ -93,7 +133,7 @@
                     android:layout_height="@dimen/button_height"
                     android:layout_marginBottom="@dimen/default_margin_small"
                     android:text="@string/pre_event_form"
-                    android:textColor="@android:color/black"
+                    android:textColor="@android:color/white"
                     tools:hint="Pre Event Form" />
 
                 <Button
@@ -101,15 +141,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/button_height"
                     android:text="@string/post_event_form"
-                    android:textColor="@android:color/black"
+                    android:textColor="@android:color/white"
                     tools:hint="Post Event Form" />
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
+            <com.google.android.material.card.MaterialCardView
+                style="@style/Widget.MaterialComponents.CardView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/default_margin_small"
-                app:cardUseCompatPadding="true">
+                android:layout_marginTop="@dimen/default_margin_small">
 
                 <TextView
                     android:id="@+id/tv_private_description"
@@ -118,7 +158,7 @@
                     android:padding="@dimen/default_margin_small"
                     android:textIsSelectable="true"
                     android:textSize="16sp" />
-            </androidx.cardview.widget.CardView>
+            </com.google.android.material.card.MaterialCardView>
 
         </LinearLayout>
 
