--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
     android:fillViewport="true"
     tools:context=".login.views.LoginActivity">
 
@@ -14,25 +13,29 @@
 
         <ImageView
             android:id="@+id/login_logo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="101dp"
+            android:layout_height="46dp"
             android:layout_marginStart="@dimen/default_margin_giant"
             android:layout_marginTop="@dimen/default_margin_giant"
             android:layout_marginEnd="@dimen/default_margin_giant"
             android:adjustViewBounds="true"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_logo"
+            android:scaleType="fitCenter"
+            android:src="@drawable/launch_logo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
+            style="@style/Widget.MaterialComponents.CardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/default_margin_large"
             android:layout_marginTop="@dimen/default_margin_enormous"
             android:layout_marginEnd="@dimen/default_margin_large"
-            app:cardBackgroundColor="@color/colorPrimary"
-            app:cardCornerRadius="0dp"
-            app:cardElevation="6dp"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/login_logo">
@@ -41,6 +44,8 @@
                 android:id="@+id/login_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clipChildren="false"
+                android:clipToPadding="false"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/default_margin">
@@ -50,7 +55,6 @@
                     android:id="@+id/til_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:theme="@style/WhiteTextField"
                     app:errorEnabled="true">
 
                     <EditText
@@ -69,7 +73,6 @@
                     android:id="@+id/til_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:theme="@style/WhiteTextField"
                     app:errorEnabled="true"
                     app:passwordToggleEnabled="true">
 
@@ -89,9 +92,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/button_height"
                     android:layout_marginTop="@dimen/default_margin_small"
-                    android:textColor="@android:color/black"
-                    android:backgroundTint="@color/colorAccent"
-                    android:text="@string/login" />
+                    android:text="@string/login"
+                    android:textColor="@android:color/white" />
 
                 <Button
                     android:id="@+id/btn_forgot_password"
@@ -99,10 +101,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/forgot_password"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@android:color/white" />
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+        </com.google.android.material.card.MaterialCardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
