--- a/app/src/main/res/layout/list_item_event_card.xml
+++ b/app/src/main/res/layout/list_item_event_card.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Widget.MaterialComponents.CardView"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_marginStart="@dimen/default_margin_small"
-    android:layout_marginEnd="@dimen/default_margin_small"
     android:layout_marginTop="@dimen/default_margin_mini"
+    android:layout_marginEnd="@dimen/default_margin_small"
     android:layout_marginBottom="@dimen/default_margin_mini"
     android:clickable="true"
     android:focusable="true"
@@ -26,37 +27,56 @@
 
         </com.google.android.gms.maps.MapView>
 
-        <androidx.cardview.widget.CardView
+        <com.google.android.material.card.MaterialCardView
+            style="@style/Widget.MaterialComponents.CardView"
             android:layout_width="match_parent"
-            android:stateListAnimator="@animator/alpha"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:stateListAnimator="@animator/alpha">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="16dp">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="@dimen/default_margin">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv_month"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textAllCaps="true"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        tools:text="Feb" />
+
+                    <TextView
+                        android:id="@+id/tv_day"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="24sp"
+                        tools:text="7" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/tv_company_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/default_margin"
                     android:background="@android:color/white"
                     android:textColor="@android:color/black"
                     android:textSize="28sp"
                     tools:hint="SEB" />
-
-                <TextView
-                    android:id="@+id/tv_company_location"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@android:color/white"
-                    android:textColor="@android:color/black"
-                    android:textSize="16sp"
-                    tools:hint="En Gata 12" />
             </LinearLayout>
-        </androidx.cardview.widget.CardView>
+
+        </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
-
-
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
