Add support for in-app forms

--- a/app/src/main/res/xml/remote_config_defaults.xml
+++ b/app/src/main/res/xml/remote_config_defaults.xml
@@ -4,4 +4,8 @@
         <key>send_notifications_enabled</key>
         <value>false</value>
     </entry>
+    <entry>
+        <key>in_app_forms_enabled</key>
+        <value>false</value>
+    </entry>
 </defaultsMap>
