Display next event

--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -55,8 +55,9 @@
                             <TextView
                                 android:id="@+id/tv_month"
                                 android:layout_width="wrap_content"
-                                android:layout_height="match_parent"
+                                android:layout_height="wrap_content"
                                 android:textAllCaps="true"
+                                android:layout_gravity="center"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="14sp"
                                 android:textStyle="bold"
@@ -64,9 +65,9 @@
 
                             <TextView
                                 android:id="@+id/tv_day"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:gravity="center"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="24sp"
                                 tools:text="7" />
