--- a/app/src/main/res/layout/list_item_past_event_card.xml
+++ b/app/src/main/res/layout/list_item_past_event_card.xml
@@ -28,7 +28,8 @@
             <TextView
                 android:id="@+id/tv_month"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:textAllCaps="true"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="14sp"
@@ -37,10 +38,11 @@
 
             <TextView
                 android:id="@+id/tv_day"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textColor="@color/colorPrimaryDark"
+                android:layout_gravity="center"
                 android:textSize="24sp"
                 tools:text="7" />
         </LinearLayout>
