--- a/app/src/main/res/layout/bottom_sheet_trip.xml
+++ b/app/src/main/res/layout/bottom_sheet_trip.xml
@@ -96,6 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/ic_add_white_24dp"
         android:layout_marginEnd="@dimen/default_margin"
         android:layout_marginBottom="@dimen/default_margin"
         app:layout_constraintEnd_toEndOf="parent" />
