--- a/app/src/main/res/layout/bottom_sheet_trip.xml
+++ b/app/src/main/res/layout/bottom_sheet_trip.xml
@@ -43,6 +43,7 @@
                 android:textStyle="bold" />
 
             <LinearLayout
+                style="?android:attr/buttonBarStyle"
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:layout_marginStart="@dimen/default_margin"
@@ -52,22 +53,30 @@
                 android:layout_height="wrap_content">
 
                 <Button
+                    style="?android:buttonBarButtonStyle"
                     android:id="@+id/btn_pre_event"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
                     android:layout_height="@dimen/button_height"
                     android:layout_marginRight="@dimen/default_margin_small"
-                    android:text="Housing"
-                    android:textColor="@android:color/white" />
+                    android:text="@string/housing"
+                    android:textColor="@android:color/white"
+                    tools:ignore="RtlHardcoded" />
 
                 <Button
+                    style="?android:buttonBarButtonStyle"
                     android:id="@+id/btn_post_event"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
                     android:layout_height="@dimen/button_height"
-                    android:text="Contacts"
+                    android:text="@string/contacts"
                     android:textColor="@android:color/white" />
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#1f000000" />
 
         </LinearLayout>
 
