--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,6 +14,67 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:id="@+id/iv_profile"
+            android:layout_width="110dp"
+            android:layout_marginTop="@dimen/default_margin"
+            android:layout_gravity="center"
+            android:layout_height="110dp"
+            android:scaleType="centerCrop"
+            android:contentDescription="@null" />
+
+        <TextView
+            android:id="@+id/tv_member_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@android:color/black"
+            android:layout_marginTop="@dimen/default_margin"
+            tools:text="Sven Svensson" />
+
+        <TextView
+            android:id="@+id/tv_member_position"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="@dimen/default_margin_small"
+            android:textColor="@android:color/black"
+            tools:text="Head of Head" />
+
+        <LinearLayout
+            android:id="@+id/layout_notifications"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_marginTop="@dimen/default_margin_large"
+            android:orientation="vertical">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#1f000000" />
+
+            <TextView
+                android:id="@+id/tv_notifications"
+                android:layout_width="match_parent"
+                android:text="@string/notification_settings"
+                android:paddingStart="@dimen/default_margin"
+                android:background="?attr/selectableItemBackground"
+                android:layout_height="60dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:textColor="@android:color/black"
+                android:gravity="center_vertical"
+                tools:ignore="RtlSymmetry" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#1f000000" />
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/btn_send_notification"
             android:layout_width="match_parent"
