--- a/app/src/main/res/layout/activity_trip_info.xml
+++ b/app/src/main/res/layout/activity_trip_info.xml
@@ -24,6 +24,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="@dimen/default_margin"
+        android:textIsSelectable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar"
         app:layout_constraintEnd_toEndOf="parent"
