--- a/app/src/main/res/layout/list_item_next_event_card.xml
+++ b/app/src/main/res/layout/list_item_next_event_card.xml
@@ -51,7 +51,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:textAllCaps="true"
-                        android:textColor="@color/colorPrimaryDark"
+                        android:textColor="@color/colorPrimary"
                         android:textSize="14sp"
                         android:textStyle="bold"
                         tools:text="Feb" />
@@ -60,7 +60,7 @@
                         android:id="@+id/tv_day"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorPrimaryDark"
+                        android:textColor="@color/colorPrimary"
                         android:layout_gravity="center"
                         android:textSize="24sp"
                         tools:text="17" />
@@ -72,8 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="@dimen/default_margin"
-                    android:background="@android:color/white"
-                    android:textColor="@android:color/black"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:textSize="28sp"
                     tools:hint="SEB" />
             </LinearLayout>
