--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#bf5c06</color>
     <color name="colorPrimaryDark">#a63208</color>
     <color name="colorAccent">#8c708a</color>
-    <color name="colorBackground">#fafafa</color>
+    <color name="colorBackground">#121212</color>
 </resources>
