--- a/app/src/main/res/drawable-night/launch_screen.xml
+++ b/app/src/main/res/drawable-night/launch_screen.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
-    <item android:drawable="@android:color/white" />
+    <item android:drawable="@color/colorBackground" />
     <item>
         <bitmap android:src="@drawable/logo_small" android:gravity="center" />
     </item>
