--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -16,7 +16,6 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:background="@android:color/white"
             android:layout_height="?android:attr/actionBarSize" />
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -44,7 +43,7 @@
                 android:id="@+id/tv_forgot_password_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
+                android:textColor="?android:attr/textColorPrimary"
                 android:clickable="true"
                 android:focusable="true"
                 android:text="@string/forgot_your_password"
