--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,6 +7,7 @@
     tools:context=".profile.ProfileFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -16,62 +17,63 @@
 
         <ImageView
             android:id="@+id/iv_profile"
-            android:layout_width="110dp"
-            android:layout_marginTop="@dimen/default_margin"
+            android:layout_width="152dp"
+            android:layout_height="152dp"
             android:layout_gravity="center"
-            android:layout_height="110dp"
-            android:scaleType="centerCrop"
-            android:contentDescription="@null" />
+            android:layout_marginTop="@dimen/default_margin"
+            android:contentDescription="@null"
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/tv_member_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="@android:color/black"
             android:layout_marginTop="@dimen/default_margin"
+            android:gravity="center"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="24sp"
             tools:text="Sven Svensson" />
 
         <TextView
             android:id="@+id/tv_member_position"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginTop="@dimen/default_margin_small"
-            android:textColor="@android:color/black"
+            android:gravity="center"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="18sp"
             tools:text="Head of Head" />
 
         <LinearLayout
             android:id="@+id/layout_notifications"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/default_margin_large"
             android:clickable="true"
             android:focusable="true"
-            android:layout_marginTop="@dimen/default_margin_large"
             android:orientation="vertical">
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#1f000000" />
+                android:layout_height="1dp" />
 
             <TextView
                 android:id="@+id/tv_notifications"
                 android:layout_width="match_parent"
-                android:text="@string/notification_settings"
-                android:paddingStart="@dimen/default_margin"
-                android:background="?attr/selectableItemBackground"
                 android:layout_height="60dp"
+                android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
-                android:textColor="@android:color/black"
                 android:gravity="center_vertical"
+                android:paddingStart="@dimen/default_margin"
+                android:text="@string/notification_settings"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="16sp"
                 tools:ignore="RtlSymmetry" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#1f000000" />
+                android:layout_height="1dp" />
 
         </LinearLayout>
 
@@ -86,40 +88,36 @@
             <TextView
                 android:id="@+id/tv_preferences"
                 android:layout_width="match_parent"
-                android:text="@string/preferences"
-                android:paddingStart="@dimen/default_margin"
-                android:background="?attr/selectableItemBackground"
                 android:layout_height="60dp"
+                android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
-                android:textColor="@android:color/black"
                 android:gravity="center_vertical"
+                android:paddingStart="@dimen/default_margin"
+                android:text="@string/preferences"
+                android:textColor="?android:attr/textColorPrimary"
+                android:textSize="16sp"
                 tools:ignore="RtlSymmetry" />
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#1f000000" />
+                android:layout_height="1dp" />
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/btn_send_notification"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/button_height"
-            android:layout_margin="@dimen/default_margin"
-            android:backgroundTint="@color/colorAccent"
-            android:text="@string/send_notifications"
-            android:textColor="@android:color/white" />
-
-        <Button
-            android:id="@+id/btn_logout"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/button_height"
-            android:layout_margin="@dimen/default_margin"
-            android:backgroundTint="@color/colorAccent"
-            android:text="@string/logout"
-            android:textColor="@android:color/white" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_logout"
+        android:layout_width="165dp"
+        android:layout_height="55dp"
+        android:layout_margin="@dimen/default_margin"
+        android:backgroundTint="@color/colorAccent"
+        android:text="@string/logout"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
