--- a/app/src/main/res/layout/fragment_trip.xml
+++ b/app/src/main/res/layout/fragment_trip.xml
@@ -1,31 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:clipChildren="false"
-        android:clipToPadding="false">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <fragment
-            android:id="@+id/map"
-            class="com.google.android.gms.maps.SupportMapFragment"
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="85dp"
+            android:layout_marginTop="-10sp"
+            android:gravity="center|center_vertical"
+            android:text="@string/tr_omg"
+            android:textAllCaps="true"
+            android:textColor="@color/colorPrimary"
+            android:textSize="72sp"
+            android:textStyle="bold"
+            tools:layout_editor_absoluteX="116dp"
+            tools:layout_editor_absoluteY="229dp" />
 
-        <include layout="@layout/bottom_sheet_trip" />
+        <TextView
+            android:id="@+id/countdown_emojis"
+            android:layout_width="match_parent"
+            android:layout_height="71dp"
+            android:gravity="center|center_vertical"
+            android:text="@string/tr_emoji_placeholder"
+            android:textColor="#000000"
+            android:textSize="54sp"
+            android:textStyle="bold" />
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="49dp" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:gravity="center"
+            android:text="@string/tr_countdown1"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="22sp"
+            tools:layout_editor_absoluteX="98dp"
+            tools:layout_editor_absoluteY="333dp" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="149dp">
+
+            <TextView
+                android:id="@+id/countdown_number"
+                android:layout_width="318dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="-30sp"
+                android:gravity="center|center_horizontal|center_vertical"
+                android:text="@string/tr_countdown_placeholder"
+                android:textColor="@color/colorAccent"
+                android:textSize="160sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="18dp"
+                android:text="@string/tr_datemargin"
+                android:textColor="@color/colorAccent"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="58dp"
+            android:gravity="center"
+            android:text="@string/tr_countdown2"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textSize="22sp"
+            tools:layout_editor_absoluteX="98dp"
+            tools:layout_editor_absoluteY="530dp" />
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
