--- a/app/src/main/res/layout/list_item_event_title.xml
+++ b/app/src/main/res/layout/list_item_event_title.xml
@@ -8,7 +8,7 @@
     android:layout_marginStart="@dimen/default_margin_small"
     android:layout_marginTop="@dimen/default_margin"
     android:layout_marginBottom="@dimen/default_margin_medium"
-    android:textColor="@android:color/black"
+    android:textColor="?android:attr/textColorPrimary"
     android:textSize="32sp"
     tools:text="Title">
 
