--- a/app/src/main/res/drawable/launch_screen.xml
+++ b/app/src/main/res/drawable/launch_screen.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" android:opacity="opaque">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android"
+    android:opacity="opaque">
     <item android:drawable="@android:color/white" />
     <item>
-        <bitmap android:src="@drawable/logo_small" android:gravity="center" />
+        <bitmap
+            android:src="@drawable/logo_small"
+            android:gravity="center" />
     </item>
 </layer-list>
